--- a/src/components/NovelHead.astro
+++ b/src/components/NovelHead.astro
@@ -17,7 +17,7 @@ const author = novel.data.author || SITE.author
 <title>{`${title} | ${SITE.title}`}</title>
 <meta name="title" content={`${title} | ${SITE.title}`} />
 <meta name="description" content={description} />
-<link rel="canonical" href={SITE.href} />
+<link rel="canonical" href={Astro.url} />
 
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
