--- a/src/components/PageHead.astro
+++ b/src/components/PageHead.astro
@@ -17,7 +17,7 @@ const image = new URL('/static/1200x630.png', Astro.site)
 
 <title>{`${title} | ${SITE.title}`}</title>
 <meta name="description" content={description} />
-<link rel="canonical" href={SITE.href} />
+<link rel="canonical" href={Astro.url} />
 {noindex && <meta name="robots" content="noindex, nofollow" />}
 
 <meta property="og:title" content={title} />
@@ -34,3 +34,5 @@ const image = new URL('/static/1200x630.png', Astro.site)
 <meta name="twitter:image" content={image} />
 <meta name="twitter:image:alt" content={title} />
 <meta name="twitter:card" content="summary_large_image" />
+
+<meta name="author" content={SITE.author} />
