--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -32,6 +32,18 @@ import { SITE } from '@/consts'
           The reading interface is optimized for distraction-free reading with
           clean typography and intuitive navigation.
         </p>
+        <h2>Attribution</h2>
+        <p>
+          This project is based on <Link
+            href="https://github.com/jktrn/astro-erudite"
+            external
+            underline>astro-erudite</Link
+          > by <Link
+            href="https://github.com/jktrn"
+            external
+            underline>jktrn</Link
+          >. It has been adapted and extended for novel and book writing workflows.
+        </p>
       </div>
     </div>
   </section>
