--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import PageHead from '@/components/PageHead.astro'
 import { badgeVariants } from '@/components/ui/badge'
 import { buttonVariants } from '@/components/ui/button'
 import Layout from '@/layouts/Layout.astro'
-import { getAllNovels } from '@/lib/data-utils'
+import { getAllNovels } from '@/lib/content/novels'
 import { formatDate } from '@/lib/utils'
 import { Image } from 'astro:assets'
 import { SITE } from '@/consts'
