--- a/src/pages/tags/[...id].astro
+++ b/src/pages/tags/[...id].astro
@@ -4,7 +4,7 @@ import { Icon } from '@/components/Icon'
 import PageHead from '@/components/PageHead.astro'
 import { badgeVariants } from '@/components/ui/badge'
 import Layout from '@/layouts/Layout.astro'
-import { getAllTags, getNovelsByTag } from '@/lib/data-utils'
+import { getAllTags, getNovelsByTag } from '@/lib/content/novels'
 import { formatDate } from '@/lib/utils'
 import { Image } from 'astro:assets'
 
