--- a/src/components/NovelCard.astro
+++ b/src/components/NovelCard.astro
@@ -3,7 +3,7 @@ import { Icon } from '@/components/Icon'
 import AvatarComponent from '@/components/ui/avatar'
 import { Badge } from '@/components/ui/badge'
 import { Separator } from '@/components/ui/separator'
-import { parseAuthors } from '@/lib/data-utils'
+import { parseAuthors } from '@/lib/content/authors'
 import { formatDate } from '@/lib/utils'
 import { Image } from 'astro:assets'
 import type { CollectionEntry } from 'astro:content'
