changed the layout for about page

--- a/src/pages/authors/index.astro
+++ b/src/pages/authors/index.astro
@@ -8,7 +8,7 @@ import { getAllAuthors } from '@/lib/content/authors'
 const authors = await getAllAuthors()
 ---
 
-<Layout containerType="responsive">
+<Layout containerType="wide">
   <PageHead slot="head" title="Authors" />
   <Breadcrumbs items={[{ label: 'Authors', icon: 'lucide:users' }]} />
   {
