--- a/src/components/FontStyles.astro
+++ b/src/components/FontStyles.astro
@@ -3,12 +3,16 @@
 import { FONTS } from '@/consts'
 
 const fonts = Object.values(FONTS)
-const defaultFont = fonts.find(f => f.default) || fonts[0]
+const defaultFont = fonts.find((f) => f.default) || fonts[0]
 ---
 
-<style is:global set:html={`
+<style
+  is:global
+  set:html={`
   /* Auto-generated @font-face rules */
-  ${fonts.map((font) => `
+  ${fonts
+    .map(
+      (font) => `
     @font-face {
       font-family: '${font.cssName}';
       src: url('${font.file}') format('${font.format}');
@@ -16,7 +20,9 @@ const defaultFont = fonts.find(f => f.default) || fonts[0]
       font-style: normal;
       font-display: swap;
     }
-  `).join('\n')}
+  `,
+    )
+    .join('\n')}
 
   /* Font switching CSS custom properties */
   :root,
@@ -24,9 +30,15 @@ const defaultFont = fonts.find(f => f.default) || fonts[0]
     --font-sans: '${defaultFont.cssName}', ${defaultFont.fallback};
   }
 
-  ${fonts.filter(f => !f.default).map((font) => `
+  ${fonts
+    .filter((f) => !f.default)
+    .map(
+      (font) => `
     [data-font='${font.id}'] {
       --font-sans: '${font.cssName}', ${font.fallback};
     }
-  `).join('\n')}
-`}></style>
+  `,
+    )
+    .join('\n')}
+`}
+></style>
