--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
+import FontToggle from '@/components/FontToggle.astro'
 import Link from '@/components/Link.astro'
 import ThemeToggle from '@/components/ThemeToggle.astro'
-import FontToggle from '@/components/FontToggle.astro'
 import { NAV_LINKS, SITE } from '@/consts'
 ---
 
@@ -10,15 +10,15 @@ import { NAV_LINKS, SITE } from '@/consts'
     class="container-responsive flex items-center justify-between gap-4 py-3"
   >
     <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
-      <img 
-        src="/static/logo.png" 
-        alt="Logo" 
-        class="size-5 sm:size-6 dark:hidden" 
+      <img
+        src="/static/logo.png"
+        alt="Logo"
+        class="size-5 sm:size-6 dark:hidden"
       />
-      <img 
-        src="/static/dark_logo.png" 
-        alt="Logo" 
-        class="size-5 sm:size-6 hidden dark:block" 
+      <img
+        src="/static/dark_logo.png"
+        alt="Logo"
+        class="hidden size-5 sm:size-6 dark:block"
       />
       <span
         class="hidden h-full text-lg leading-none font-medium min-[400px]:block"
