--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -3,12 +3,12 @@ import { SITE } from '@/consts'
 ---
 
 <!-- Standard favicon -->
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/webp" href="/favicon-96x96.webp" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
 
 <!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.webp" />
 <meta name="apple-mobile-web-app-title" content={SITE.title} />
 
 <!-- Web App Manifest -->
