--- a/src/components/NovelHead.astro
+++ b/src/components/NovelHead.astro
@@ -10,7 +10,7 @@ const { novel } = Astro.props
 
 const title = novel.data.title || SITE.title
 const description = novel.data.description || SITE.description
-const image = new URL('/static/1200x630.png', Astro.site)
+const image = new URL('/static/1200x630.webp', Astro.site)
 const author = novel.data.author || SITE.author
 ---
 
