--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,13 +11,19 @@ import { NAV_LINKS, SITE } from '@/consts'
   >
     <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
       <img
-        src="/static/logo.png"
+        src="/static/logo-48.webp"
+        srcset="/static/logo-48.webp 1x, /static/logo-96.webp 2x"
         alt="Logo"
+        width="24"
+        height="24"
         class="size-5 sm:size-6 dark:hidden"
       />
       <img
-        src="/static/dark_logo.png"
+        src="/static/dark_logo-48.webp"
+        srcset="/static/dark_logo-48.webp 1x, /static/dark_logo-96.webp 2x"
         alt="Logo"
+        width="24"
+        height="24"
         class="hidden size-5 sm:size-6 dark:block"
       />
       <span
