--- a/src/components/PageHead.astro
+++ b/src/components/PageHead.astro
@@ -12,7 +12,7 @@ const {
   description = SITE.description,
   noindex = false,
 } = Astro.props
-const image = new URL('/static/1200x630.png', Astro.site)
+const image = new URL('/static/1200x630.webp', Astro.site)
 ---
 
 <title>{`${title} | ${SITE.title}`}</title>
