--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@ import FontToggle from '@/components/FontToggle.astro'
 import Link from '@/components/Link.astro'
 import ThemeToggle from '@/components/ThemeToggle.astro'
 import { NAV_LINKS, SITE } from '@/consts'
+import { withBase } from '@/lib/utils/url'
 ---
 
 <div>
@@ -11,16 +12,16 @@ import { NAV_LINKS, SITE } from '@/consts'
   >
     <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
       <img
-        src="/static/logo-48.webp"
-        srcset="/static/logo-48.webp 1x, /static/logo-96.webp 2x"
+        src={withBase('/static/logo-48.webp')}
+        srcset={`${withBase('/static/logo-48.webp')} 1x, ${withBase('/static/logo-96.webp')} 2x`}
         alt="Logo"
         width="24"
         height="24"
         class="size-5 sm:size-6 dark:hidden"
       />
       <img
-        src="/static/dark_logo-48.webp"
-        srcset="/static/dark_logo-48.webp 1x, /static/dark_logo-96.webp 2x"
+        src={withBase('/static/dark_logo-48.webp')}
+        srcset={`${withBase('/static/dark_logo-48.webp')} 1x, ${withBase('/static/dark_logo-96.webp')} 2x`}
         alt="Logo"
         width="24"
         height="24"
