--- a/src/components/ChapterHead.astro
+++ b/src/components/ChapterHead.astro
@@ -1,5 +1,6 @@
 ---
 import { SITE } from '@/consts'
+import { withBase } from '@/lib/utils/url'
 import type { CollectionEntry } from 'astro:content'
 
 interface Props {
@@ -12,7 +13,7 @@ const { chapter, novel } = Astro.props
 const title = `${chapter.data.title} - ${novel.data.title}` || SITE.title
 const description =
   chapter.data.summary || novel.data.description || SITE.description
-const image = new URL('/static/1200x630.webp', Astro.site)
+const image = new URL(withBase('/static/1200x630.webp'), Astro.site)
 const author = novel.data.author || SITE.author
 ---
 
