--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -1,18 +1,19 @@
 ---
 import { SITE } from '@/consts'
+import { withBase } from '@/lib/utils/url'
 ---
 
 <!-- Standard favicon -->
-<link rel="icon" type="image/webp" href="/favicon-96x96.webp" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="icon" type="image/webp" href={withBase('/favicon-96x96.webp')} sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href={withBase('/favicon.svg')} />
+<link rel="shortcut icon" href={withBase('/favicon.ico')} />
 
 <!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.webp" />
+<link rel="apple-touch-icon" sizes="180x180" href={withBase('/apple-touch-icon.webp')} />
 <meta name="apple-mobile-web-app-title" content={SITE.title} />
 
 <!-- Web App Manifest -->
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="manifest" href={withBase('/site.webmanifest')} />
 
 <!-- Theme color -->
 <meta
