--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,6 +1,7 @@
 ---
 import { SITE } from '@/consts'
 import { ClientRouter } from 'astro:transitions'
+import { withBase } from '@/lib/utils/url'
 import Favicons from './Favicons.astro'
 ---
 
@@ -33,8 +34,8 @@ import Favicons from './Favicons.astro'
     media="(prefers-color-scheme: light)"
   />
 
-  <link rel="sitemap" href="/sitemap-index.xml" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="sitemap" href={withBase('/sitemap-index.xml')} />
+  <link rel="manifest" href={withBase('/site.webmanifest')} />
   <link
     rel="alternate"
     type="application/rss+xml"
