--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,5 +1,6 @@
 ---
 import { cn } from '@/lib/utils'
+import { withBase } from '@/lib/utils/url'
 
 interface Props {
   href: string
@@ -9,11 +10,14 @@ interface Props {
   [key: string]: any
 }
 
-const { href, external, class: className, underline, ...rest } = Astro.props
+const { href, external, class: className, underline, ...rest} = Astro.props
+
+// Add base path to internal links
+const finalHref = external ? href : withBase(href)
 ---
 
 <a
-  href={href}
+  href={finalHref}
   target={external ? '_blank' : '_self'}
   class={cn(
     'inline-block transition-colors duration-300 ease-in-out',
