--- a/src/components/PageHead.astro
+++ b/src/components/PageHead.astro
@@ -1,5 +1,6 @@
 ---
 import { SITE } from '@/consts'
+import { withBase } from '@/lib/utils/url'
 
 interface Props {
   title?: string
@@ -12,7 +13,7 @@ const {
   description = SITE.description,
   noindex = false,
 } = Astro.props
-const image = new URL('/static/1200x630.webp', Astro.site)
+const image = new URL(withBase('/static/1200x630.webp'), Astro.site)
 ---
 
 <title>{`${title} | ${SITE.title}`}</title>
