--- a/src/pages/authors/[...id].astro
+++ b/src/pages/authors/[...id].astro
@@ -5,8 +5,8 @@ import { Icon } from '@/components/Icon'
 import PageHead from '@/components/PageHead.astro'
 import { badgeVariants } from '@/components/ui/badge'
 import Layout from '@/layouts/Layout.astro'
-import { withBase } from "@/lib/utils/url"
 import { formatDate } from '@/lib/utils'
+import { withBase } from '@/lib/utils/url'
 import { Image } from 'astro:assets'
 import { getCollection } from 'astro:content'
 
