--- a/src/pages/tags/[...id].astro
+++ b/src/pages/tags/[...id].astro
@@ -5,8 +5,8 @@ import PageHead from '@/components/PageHead.astro'
 import { badgeVariants } from '@/components/ui/badge'
 import Layout from '@/layouts/Layout.astro'
 import { getAllTags, getNovelsByTag } from '@/lib/content/novels'
-import { withBase } from "@/lib/utils/url"
 import { formatDate } from '@/lib/utils'
+import { withBase } from '@/lib/utils/url'
 import { Image } from 'astro:assets'
 
 export async function getStaticPaths() {
